Add authentication so only logged in users can view/set profiles

--- a/html_files/login.html
+++ b/html_files/login.html
@@ -4,7 +4,7 @@
         <title>Log In</title>
     </head>
     <body>
-        <p>Log in to your account!</p>
+        <p>Log in to your account, then create a profile and connect!</p>
         <form id="login-form">
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" required><br>
