If user signs up, redirect them to create a profile

--- a/html_files/signup.html
+++ b/html_files/signup.html
@@ -36,6 +36,10 @@
                 // get response from backend
                 const result = await response.json();
                 document.getElementById("message").textContent = result.message;
+                
+                if (result.success) {
+                    window.location.href ="/set-profile";
+                }
                 });
 
             </script>
