Minor visual fixes

--- a/html_files/login.html
+++ b/html_files/login.html
@@ -15,9 +15,11 @@
     .btn:hover{filter:brightness(0.95)}
     a{color:#7c3aed;text-decoration:none}
     </style>
+</head>
     <body>
         <div class="wrap">
-        <p>Log in to your account!</p>
+        <a href="/">← Back</a>
+        <h1>Log in</h1>
         <form id="login-form">
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" required placeholder="you@example.com"><br>
